syntax = "proto3";

package journal;

service JournalService {
	rpc FindJournals(JournalsRequest) returns (JournalsResponse) {}
	rpc FindJournal(JournalRequest) returns (JournalResponse) {}
	rpc ImportJournal(ImportRequest) returns (ImportResponse) {}
	rpc ModifyJournal(ModifyRequest) returns (ModifyResponse) {}
	rpc AddDownloadSetting(AddDownloadSettingRequest) returns (AddDownloadSettingResponse) {}
	rpc FindDownloadSetting(FindDownloadSettingRequest) returns (FindDownloadSettingResponse) {}
	rpc FindDownloadSettings(FindDownloadSettingsRequest) returns (FindDownloadSettingsResponse) {}
	rpc AddSelectJournals(AddSelectJournalsRequest) returns (AddSelectJournalsResponse) {}
	rpc FindSelectJournals(JournalsRequest) returns (JournalsResponse) {}
	rpc FindConditionTemplates(FindConditionTemplatesRequest) returns (FindConditionTemplatesResponse) {}
	rpc AddConditionTemplate(AddConditionTemplateRequest) returns (AddConditionTemplateResponse) {}
	rpc DeleteConditionTemplate(DeleteConditionTemplateRequest) returns (DeleteConditionTemplateResponse) {}
}

// 分录
message Journal {
	string journal_id =1; // 仕訳ID
	string journal_name =2; // 仕訳名称
	repeated Pattern patterns =3; // 会计处理pattern
	string app_id =4; // 所属APP
	string created_at =5; // 创建时间
	string created_by =6; // 创建者
	string updated_at =7; // 更新时间
	string updated_by =8; // 更新者
}
// 分录pattern
message Pattern {
	string pattern_id =1; // 会计处理分类ID
	string pattern_name =2; // 会计处理名称
	repeated Subject subjects =3; // 出力科目
	string journal_type =4; // 分录结构
}

// 分录subject	
message Subject	 {
	string subject_key =1; // 科目key
	string lending_division =2; // 借贷区分
	string default_name =3; // 默认科目名称
	string subject_name =4; // 科目名称
	string amount_name =5; // 金额名
	string amount_field =6; // 金额的字段
	string change_flag =7; // 变更前后值的区分
}

// 查找多条记录
message JournalsRequest{
	string app_id =1; // 所属APP
	string database =2; // 数据库
}

message JournalsResponse{
	repeated Journal journals = 1;
}

// 查询单条记录
message JournalRequest{
	string journal_id =1; // 仕訳ID
	string app_id =2; // 所属APP
	string database =3; // 数据库
}

message JournalResponse{
	Journal journal = 1;
}

// 导入数据
message ImportRequest{
	repeated Journal journals =1; // 导入的数据
	string database =2; // 数据库
	string writer =3; // 创建者
}

message ImportResponse{
}

// 更新记录
message ModifyRequest{
	string journal_id =1; // 仕訳ID-条件
	string app_id =2; // 所属APP-条件
	string pattern_id =3; // 会计处理分类ID-条件
	string subject_key =4; // 科目key-条件
	string lending_division =5; // 借贷区分-变更项目
	string change_flag =11; // 变更前后值的区分-变更项目
	string subject_name =6; // 默认科目名称-变更项目
	string subject_cd =12; // 默认科目名称-变更项目
	string amount_name =7; // 金额名-变更项目
	string amount_field =8; // 金额的字段-变更项目
	string database = 9; // 数据库
	string writer = 10; // 更新者
}

message ModifyResponse{
}

// 添加分录下载设定
message AddDownloadSettingRequest{
	string app_id = 1;
	string layout_name = 2;
	string char_encoding = 3;
	string header_row = 4;
	string separator_char = 5;
	string line_breaks = 6;
	bool fixed_length = 7;
	int64 number_items = 8;
	string valid_flag = 9;
	repeated FieldRule field_rule = 10;
	string database = 11; // 数据库
}

message AddDownloadSettingResponse{
}

// 字段规则
message FieldRule {
	string download_name = 1;
	repeated FieldCondition field_conditions = 2;
	string field_id = 3;
	string setting_method = 4;
	string field_type = 5;
	string datastore_id = 6;
	string format = 7;
	string edit_content= 8;
	string else_value = 9;
	string else_type = 10;
	string else_value_data_type = 11;
	string kotei_type = 12;
	int64 kotei_ketasu = 13;
	string kotei_position = 14;
	string kotei_char = 15;
	string custom_field_id = 16; //台账下载字段id
}

// 自定义条件
message FieldCondition {
	string condition_id =1;   
	string condition_name =2;  
	repeated FieldGroup field_groups =3;
	string then_value =4;
	string else_value =5;
	string then_type =6;
	string else_type =7;
	string then_custom_type =8;
	string else_custom_type =9;
	repeated CustomField then_custom_fields =10;
	repeated CustomField else_custom_fields =11;
	string then_value_data_type =12;
	string else_value_data_type =13;
} 

// 条件组
message FieldGroup {
	string group_id =1; // 分组ID
	string group_name =2; // 分组名称
	string type =3; //
	string switch_type =4; //
	repeated FieldCon field_cons =5; // 小条件
}

// 小条件	
message FieldCon {
	string con_id =1; // 小条件ID
	string con_name =2; // 小条件名称
	string con_field =3; // 小条件左字段
	string con_operator =4;  // 小条件比较符
	string con_value =5; // 小条件右字段
	string con_data_type =6; // 小条件数据类型
}

// 自定义字段
message CustomField {
	string custom_field_type =1; // 自定义字段类型
	string custom_field_value =2; // 自定义字段名称
	string custom_field_data_type =3; // 自定义字段数据类型
}


// 查询分录下载设定
message FindDownloadSettingRequest{
	string app_id = 1;
	string database = 2; // 数据库
}

message FindDownloadSettingResponse{                 
    string app_id = 1;              
    string layout_name = 2;          
    string char_encoding = 3;        
    string header_row = 4;           
    string separator_char = 5;       
    string line_breaks = 6;          
    bool fixed_length = 7;           
    int64 number_items = 8;
	string valid_flag = 9;      
    repeated FieldRule field_rule = 10;  
}

// 查询分录下载设定
message FindDownloadSettingsRequest{
	string app_id = 1;
	string database = 2; // 数据库
}

message FindDownloadSettingsResponse{                 
    repeated FindDownloadSettingResponse field_conf = 1;
}

// 添加选择分录
message AddSelectJournalsRequest{
	string app_id = 1;
	string database = 2; // 数据库
	repeated string selected_journal = 3;
}
 
message AddSelectJournalsResponse{                 
}

// 自定义条件模板
message ConditionTemplate{
	string template_id =1;   
	string template_name =2; 
	FieldCondition field_condition =3; 
	string created_at =4; // 创建时间
	string created_by =5; // 创建者
	string app_id = 6;
}

// 查询自定义条件模板
message FindConditionTemplatesRequest{
	string app_id = 1;
	string database = 2; // 数据库
}

message FindConditionTemplatesResponse{
	repeated ConditionTemplate condition_templates =1;
}

// 添加自定义条件模板
message AddConditionTemplateRequest{
	string app_id = 1;
	string database = 2; // 数据库
	ConditionTemplate condition_template =3;
	string writer = 4; // 创建者
}

message AddConditionTemplateResponse{
}

// 删除自定义条件模板
message DeleteConditionTemplateRequest{
	string app_id = 1;
	string database = 2; // 数据库
	string template_id =3; 
}

message DeleteConditionTemplateResponse{
}

